--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,4 +1,6 @@
-@import '~bootstrap/scss/bootstrap.scss';
+@import "~bootswatch/dist/quartz/variables"; // also "superhero"
+@import "~bootstrap/scss/bootstrap";
+@import "~bootswatch/dist/quartz/bootswatch"; // also "superhero"
 
 html {
     position: relative;
@@ -18,7 +20,6 @@ html {
     /* Set the fixed height of the footer here */
     height: 60px;
     line-height: 60px; /* Vertically center the text there */
-    background-color: #f5f5f5;
 }
 
 .footer > .container {
