--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,6 @@
-@import "~bootswatch/dist/quartz/variables"; // also "superhero"
+@import "~bootswatch/dist/cosmo/variables"; // also "superhero" / quartz / cosmo
 @import "~bootstrap/scss/bootstrap";
-@import "~bootswatch/dist/quartz/bootswatch"; // also "superhero"
+@import "~bootswatch/dist/cosmo/bootswatch"; // also "superhero" / quartz / cosmo
 
 html {
     position: relative;
@@ -45,4 +45,8 @@ code {
 
 .v--modal > div {
     margin: 10px !important;
+}
+
+.breadcrumb {
+    background-color: initial;
 }
