--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,4 +1,5 @@
-@import "~bootswatch/dist/cosmo/variables"; // also "superhero" / quartz / cosmo
+@import "~bootswatch/dist/cosmo/variables";
+// also "superhero" / quartz / cosmo
 @import "~bootstrap/scss/bootstrap";
 @import "~bootswatch/dist/cosmo/bootswatch"; // also "superhero" / quartz / cosmo
 
@@ -49,4 +50,8 @@ code {
 
 .breadcrumb {
     background-color: initial;
+}
+
+.flag {
+    vertical-align: middle !important;
 }
